[package]
name = "iso9660"
description = "(Incomplete) implementation of ISO9660 filesystem"
version = "0.1.1"
authors = ["Ian Douglas Scott <ian@iandouglasscott.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ids1024/iso9660-rs"

[dependencies]
bitflags = "2.0"
embedded-io = { version = "0.7.1", features = ["alloc"] }
ucs2 = "0.3.3"

[dependencies.nom]
version = "7.1"
features = ["alloc"]
default-features = false
[dependencies.time]
version = "0.3"
features = ["alloc"]
default-features = false


[dev-dependencies]
md5 = "0.7"
fuser = "0.13"
libc = "0.2"

[features]
default = ["std"]
std = ["embedded-io/std"]
