[package]
name = "iso9660-no-std"
description = "No-std implementation of ISO9660 filesystem"
version = "0.1.1"
authors = ["Ian Douglas Scott <ian@iandouglasscott.com>", "Matt Prodani<mattp@hey.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mattprod/iso9660-no-std"
readme = "README.md"
categories = ["embedded", "filesystem", "no-std"]
keywords = ["no-std", "iso9660", "joliet"]

[dependencies]
bitflags = "2.0"
embedded-io = { version = "0.7.1", features = ["alloc"] }
ucs2 = "0.3.3"

[dependencies.nom]
version = "7.1"
features = ["alloc"]
default-features = false
[dependencies.time]
version = "0.3"
features = ["alloc"]
default-features = false


[dev-dependencies]
md5 = "0.7"
fuser = "0.13"
libc = "0.2"

[features]
default = ["joliet"]
joliet = []
std = ["embedded-io/std", "time/std"]

[[example]]
name = "print_file_std"
required-features = ["std", "joliet"]

[[example]]
name = "iso_fuse_std"
required-features = ["std", "joliet"]
